Fix dark mode

--- a/style.css
+++ b/style.css
@@ -1,18 +1,44 @@
 body {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: white;
+    color: black;
+    border-color: black;
+  }
+
+  nav a:link {
+    color: black;
+    text-decoration: none;
+  }
+
+  nav a:visited {
+    color: black;
+    text-decoration: none;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: white;
+    border-color: white;
+  }
+
+  nav a:link {
+    color: white;
+    text-decoration: none;
+  }
+
+  nav a:visited {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 .container {
